--- a/feature.html
+++ b/feature.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intro to git and github</title>
+    <title>New Feature</title>
 </head>
 <body>
-    <p>Added some features</p>
+    <p>Some paragraph</p>
 </body>
 </html>
